--- a/wercker.yml
+++ b/wercker.yml
@@ -6,5 +6,6 @@ build:
         name: docker build
         code: |
           cd $WERCKER_SOURCE_DIR
+          sudo curl http://get.docker.io | sh
           sudo docker version
           sudo docker build -t mies/rethinkdb .
